# swagger/swagger.json
@@ -86,6 +86,38 @@
         }
       }
     },
+
+    "paths": {
+      "/forgotPassword": {
+        "post": {
+          "tags": [
+            "forgotPassword"
+          ],
+          "description": "Create reset password ",
+          "parameters": [
+            {
+              "name": "forgotPassword",
+              "in": "body",
+              "description": "User that we want to create",
+              "schema": {
+                "$ref": "#/definitions/forgotPassword"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "New user is created",
+              "schema": {
+                "$ref": "#/definitions/forgotPassword"
+              }
+            }
+          }
+        }
+      },
+
     "definitions": {
       "register": {
         "type": "object",
@@ -117,6 +149,15 @@
           "type": "string"
           }
         }
-      }
+      },
+      "forgotPassword": {
+        "type": "object",
+        "properties": {
+          "email" : {
+            "type" :"string"
+          }
+        }
+     } 
     }
   } 
+} 
